fix invisible space under header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,6 +28,7 @@ body::-webkit-scrollbar {
     flex-direction: column;
     flex-grow: 1;
     overflow: auto;
+    padding-top: 2rem;
 }
 
 header {
@@ -35,7 +36,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: #1a1a1a;
-    margin-bottom: 2rem;
+    margin-bottom: 0rem;
     padding: 0 1rem 0 1rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     flex-shrink: 0;
